fix(_quickview): got rid of the height and width and added a no wrap for dashes and spaces

--- a/app/styles/_quickview.scss
+++ b/app/styles/_quickview.scss
@@ -118,15 +118,14 @@ ul.list-unstyled.RecentActivity
     padding: 25px;
     .company {
         background: $gray-lightest;
-        padding: 2px 17px;
+        padding: 2px 10px;
         border-radius: 10px;
         display: inline-block;
         position: absolute;
         font-size: 12px;
         left: 100px;
         bottom: -30px;
-        height:22px;
-        width: 100px;
+        white-space: nowrap;
     }
 
     .quickview-header-info {
